task2-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dep
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: nursultannd/backend:4
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: backend-ser
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
