task1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task1-deployment
spec:
  selector:
    matchLabels:
      app: task1
  replicas: 2
  template:
    metadata:
      labels:
        app: task1
    spec:
      containers:
        - name: task1
          image: nursultannd/task1:3
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: task1-service
spec:
  selector:
    app: task1
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task1-ingress
spec:
  rules:
    - host: api.sa.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task1-service
                port:
                  number: 8000
