task2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task2-ingress
spec:
  rules:
    - host: api.sa.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-ser
                port:
                  number: 3001
    - host: sa.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-ser
                port:
                  number: 3000
